--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,14 @@
-* {
-    background-color: aqua;
+html {
+    color: #3C3C3C;
+    background-color: #A2D3C2;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+main {
+    background-color: #D6F49D;
+    width: 90%;
+    margin: auto;
+    padding: .5em 2em 2em 2em;
 }
 
 h2, h3 {
