--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 <link rel="stylesheet" href="/css/styles.css">
-
+<body>
+<main>
 <h2>Home</h2>
 <hr>
 <h3>Tapes</h3>
@@ -7,3 +8,5 @@
 <% tapes.forEach(function(tape) { %>
     <li><a href="detail?artist=<%= tape.artist %>"> <%= tape.artist %></a></li>
 <% }); %>
+</main>
+</body>
