--- a/views/details.ejs
+++ b/views/details.ejs
@@ -5,7 +5,7 @@
 <hr>
 <h4><a href="/">Back to tapes</a></h4>
 
-<h3>Artist: <%= result.artist %></h3>
+<h3><%= result.artist %></h3>
 
 <p><%= result.title %></p>
 <p><%= result.genre %></p>
