--- a/views/details.ejs
+++ b/views/details.ejs
@@ -7,7 +7,7 @@
 
 <h3><%= result.artist %></h3>
 
-<p><%= result.title %></p>
+<h3><span class=title><%= result.title %></span></h3>
 <p><%= result.genre %></p>
 <p><%= result.year %></p>
 <p>$<%= result.price %></p>
