--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,7 +22,15 @@ h3 {
 }
 
 h4 {
-    font-size: 1em;
+    font-size: 1.2em;
+}
+
+.title {
+    font-style: italic;
+}
+
+p {
+    font-size: 1.2em;
 }
 
 a {
