--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -1,5 +1,8 @@
 <html>
+    <link rel="stylesheet" href="/css/styles.css">
     <body>
-        <h3><%= result.artist %> deleted</h3>
+        <main>
+        <h3>Successfully deleted!</h3>
+        </main>
     </body>
 </html>
