--- a/views/delete.ejs
+++ b/views/delete.ejs
@@ -2,7 +2,8 @@
     <link rel="stylesheet" href="/css/styles.css">
     <body>
         <main>
-        <h3>Successfully deleted!</h3>
+                <h3>You have deleted <%= result.deletedCount %> items!</h3>
+                <p><%=  result.deletedCount %></p>
         </main>
     </body>
 </html>
