--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,15 +1,19 @@
+<head>
 <link rel="stylesheet" href="/css/styles.css">
+<meta charset="UTF-8" />
+<title>Tapes on Deck</title>
+</head>
 <body>
 <main>
 <h2>Detail</h2>
 <hr>
 <h4><a href="/">Back to tapes</a></h4>
 
-<h3><%= result.artist %></h3>
+<h3><%= artist %></h3>
 
-<h3><span class=title><%= result.title %></span></h3>
-<p><%= result.year %></p>
-<p><%= result.genre %></p>
-<p>$<%= result.price %></p>
+<h3><span class=title><%= title %></span></h3>
+<p><%= year %></p>
+<p><%= genre %></p>
+<p>$<%= price %></p>
 </main>
 </body>
