--- a/views/home2.ejs
+++ b/views/home2.ejs
@@ -6,8 +6,48 @@
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <style>
-        .hello {
-            color: blue;
+
+        html {
+            color: #333745;
+            background-color: #7CA5B8;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+        }
+
+        main {
+          background-color: #FFEEDB;
+          width: 90%;
+          margin: auto;
+          padding: .5em 2em 2em 2em;
+          border-radius: 15px;
+        }
+        h2, h3, h4 {
+          font-family: Georgia, serif;
+          font-size: 2em;
+        }
+
+        h3 {
+          font-size: 1.5em;
+        }
+
+        h4 {
+            font-size: 1.2em;
+        }
+
+        .title {
+            font-style: italic;
+        }
+
+        p {
+            font-size: 1.2em;
+        }
+
+        a {
+            color: #FE5F55;
+        }
+
+        a:hover {
+            color: #7F96FF;
+            text-decoration-style: wavy;
         }
     </style>
     <!-- Don't use this in production: -->
@@ -18,11 +58,11 @@
     <script type="text/babel">
     
     const divStyle = {
-    color: 'red'
+    color: '#7F96FF'
     };
 
 
-    const greeting = <h1 className="hello">HEY BUDDY WHAT UP</h1>;
+    const details = "details";
     const tapes = <%- tapes %>;
         console.log(tapes);
     const tapesList = tapes.map((tape) => <li key={tape.artist}><a href={tape.artist}>{tape.artist}</a></li>)
@@ -38,7 +78,11 @@
 
     const MyApp = (props) => {
         if (props.user) {
-            return <span><h1 style={divStyle}>Hello, {props.user}!</h1>{tapesList}</span>;
+            return <main>
+              <h2>Home</h2>
+              <h3>Tapes</h3>
+              {tapesList}
+              <p style={divStyle}>You've reached the end of the tapes list, {props.user}!</p></main>;
        
         }
         return greeting;
