--- a/views/home.ejs
+++ b/views/home.ejs
@@ -58,7 +58,7 @@
     <script type="text/babel">
     
     const divStyle = {
-    color: '#7F96FF'
+    color: '#333745'
     };
 
     const greeting = <main><h1>Hello, we haven't met!</h1></main>;
