--- a/views/home.ejs
+++ b/views/home.ejs
@@ -85,7 +85,8 @@
               <ColoredLine color="#333745" />
               {subHeader}
               {tapesList}
-              <p style={divStyle}>You've reached the end of the tapes list, {props.user}!</p></main>;
+              <p style={divStyle}>You've reached the end of the tapes list, {props.user}!</p>
+              </main>;
        
         }
         return greeting;
