--- a/views/home.ejs
+++ b/views/home.ejs
@@ -57,7 +57,7 @@
     <div id="root"></div>
     <script type="text/babel">
     
-    const divStyle = {
+    const greetStyle = {
     color: '#333745'
     };
 
@@ -85,7 +85,7 @@
               <ColoredLine color="#333745" />
               {subHeader}
               {tapesList}
-              <p style={divStyle}>You've reached the end of the tapes list, {props.user}!</p>
+              <p style={greetStyle}>You've reached the end of the tapes list, {props.user}!</p>
               </main>;
        
         }
