--- a/views/home.ejs
+++ b/views/home.ejs
@@ -75,8 +75,8 @@
     />
     );
 
-    const header = <h2>Home</h2>
-    const subHeader = <h3>Tapes</h3>
+    const header = <h2>Home</h2>;
+    const subHeader = <h3>Tapes</h3>;
 
     const MyApp = (props) => {
         if (props.user) {
