--- a/views/details.ejs
+++ b/views/details.ejs
@@ -11,9 +11,9 @@
 
 <h3><%= artist %></h3>
 
-<h3><span class=title><%= title %></span></h3>
-<p><%= year %></p>
-<p><%= genre %></p>
-<p>$<%= price %></p>
+<h3><span class="title"><%= result.title %></span></h3>
+<p><%= result.year %></p>
+<p><%= result.genre %></p>
+<p>$<%= result.price %></p>
 </main>
 </body>
