title for everything

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -9,7 +9,7 @@
 <hr>
 <h4><a href="/">Back to tapes</a></h4>
 
-<h3><%= artist %></h3>
+<h3><%= result.artist %></h3>
 
 <h3><span class="title"><%= result.title %></span></h3>
 <p><%= result.year %></p>
