--- a/views/home.ejs
+++ b/views/home.ejs
@@ -63,7 +63,7 @@
 
     const greeting = <main><h1>Hello, we haven't met!</h1></main>;
     let tapes = <%- tapes %>;
-    let tapesList = tapes.map((tape) => <li key={tape.artist}><a href={tape.artist}>{tape.artist}</a></li>);
+    let tapesList = tapes.map((tape) => <li key={tape.title}><a href={tape.title}>{tape.title}</a></li>);
 
     const ColoredLine = ({ color }) => (
     <hr
