--- a/views/home.ejs
+++ b/views/home.ejs
@@ -90,6 +90,7 @@
                     <label>Year: <input type="text" name="year" onChange={props.onChange} value={props.tape.year || ""}/></label>
                     <label>Genre: <input type="text" name="genre" onChange={props.onChange} value={props.tape.genre || ""}/></label>
                     <label>Artist: <input type="text" name="price" onChange={props.onChange} value={props.tape.price || ""}/></label>
+                    <button onClick={props.resetHandler} type="button">Cancel</button>
                 </form>
             </div>
         )
@@ -117,7 +118,10 @@
             console.log(event.target.value);
         }
 
-
+        clearForm = (event) => {
+          
+          this.setState({"currentTape":{}})
+        }
 
         render() {
             return (
@@ -125,7 +129,7 @@
                 {header}
                 <ColoredLine color="#333745" />
                 {subHeader}
-                <Tapes data={this.state.tapes} clickHandler = {this.showDetail}/>
+                <Tapes data={this.state.tapes} clickHandler = {this.showDetail} resetHandler = {this.clearForm}/>
                 <TapeDetail
                 tape={this.state.currentTape}
                 onChange={this.fieldChanged}
