ready for submit

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -90,7 +90,7 @@
                     <label>Year: <input type="text" name="year" onChange={props.onChange} value={props.tape.year || ""}/></label>
                     <label>Genre: <input type="text" name="genre" onChange={props.onChange} value={props.tape.genre || ""}/></label>
                     <label>Artist: <input type="text" name="price" onChange={props.onChange} value={props.tape.price || ""}/></label>
-                    <button onClick={props.resetHandler} type="button">Cancel Edit</button>
+                    <button onClick={props.resetHandler} type="button">Clear</button>
                 </form>
             </div>
         )
