ready for submit

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -54,6 +54,13 @@
             display: block;
             padding: .5vh;
         }
+
+        button {
+            background-color: #7F96FF;
+            color: #FFF;
+            border-radius: 10%;
+            padding: .2vh 2vw;
+        }
     </style>
     <!-- Don't use this in production: -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
