--- a/views/home.ejs
+++ b/views/home.ejs
@@ -60,6 +60,7 @@
             color: #FFF;
             border-radius: 10%;
             padding: .2vh 2vw;
+            margin-top: 2vh;
         }
     </style>
     <!-- Don't use this in production: -->
