--- a/views/home.ejs
+++ b/views/home.ejs
@@ -83,7 +83,7 @@
     const subHeader = <h3>Tapes</h3>;
 
     const Tapes = (props) => {
-        let tapesList = props.data.map((tape) => <li id={tape._id} key={tape._id} onClick={props.clickHandler}>{tape.title}</li>);
+        let tapesList = props.tapes.map((tape) => <li id={tape._id} key={tape._id} onClick={props.clickHandler}>{tape.title}</li>);
         return <ul>{tapesList}</ul>;
     }
 
@@ -93,15 +93,15 @@
                 <hr/>
                 <h4>Details:</h4>
                 <form id="edit-tape-detail">
-                    <label>Title: <input type="text" name="title" onChange={props.onChange} value={props.tape.title || ""}/></label>
-                    <label>Artist: <input type="text" name="artist" onChange={props.onChange} value={props.tape.artist || ""}/></label>
-                    <label>Year: <input type="text" name="year" onChange={props.onChange} value={props.tape.year || ""}/></label>
-                    <label>Genre: <input type="text" name="genre" onChange={props.onChange} value={props.tape.genre || ""}/></label>
-                    <label>Price: <input type="text" name="price" onChange={props.onChange} value={props.tape.price || ""}/></label>
+                    <label>Title: <input type="text" name="title" onChange={props.change} value={props.tape.title || ""}/></label>
+                    <label>Artist: <input type="text" name="artist" onChange={props.change} value={props.tape.artist || ""}/></label>
+                    <label>Year: <input type="text" name="year" onChange={props.change} value={props.tape.year || ""}/></label>
+                    <label>Genre: <input type="text" name="genre" onChange={props.change} value={props.tape.genre || ""}/></label>
+                    <label>Price: <input type="text" name="price" onChange={props.change} value={props.tape.price || ""}/></label>
                 </form>
-                <button onClick={props.resetHandler} type="button">Clear</button>
-                <button onClick={props.saveTape} type="button">Save</button>
-                <button onClick={props.deleteTape} type="button">Delete</button>
+                <button onClick={props.reset} type="button">Clear</button>
+                <button onClick={props.save} type="button">Save</button>
+                <button onClick={props.delete} type="button">Delete</button>
             </div>
         )
     }
@@ -113,26 +113,32 @@
                 tapes: <%- tapes %>,
                 currentTape: {}
             };
+
+            this.showDetail = this.showDetail.bind(this);
+            this.fieldChange = this.fieldChange.bind(this);
+            this.clearForm = this.clearForm.bind(this);
+            this.saveTape = this.saveTape.bind(this);
+            this.deleteTape = this.deleteTape.bind(this);
+
         }
 
         showDetail = (event) => {
             console.log(event.target.id)
-            let newTape = this.state.tapes.find((tape) => tape._id == event.target.id);
-            this.setState({"currentTape":newTape})
+            let detailTape = this.state.tapes.find((tape) => tape._id == event.target.id);
+            this.setState({currentTape: detailTape})
         }
 
-        fieldChanged = (event) => {
+        fieldChange = (event) => {
             let newTape = this.state.currentTape;
             newTape[event.target.name] = event.target.value;
             this.setState({currentTape: newTape});
         }
 
         clearForm = (event) => {
-          this.setState({"currentTape":[{}]});
+          this.setState({currentTape: [{}]});
         }
 
         saveTape = () => {
-            console.log(this.state.currentTape)
             if (this.state.currentTape == {}) return;
             let newTape = this.state.currentTape;
 
@@ -156,8 +162,16 @@
             let id = this.state.currentTape._id;
             if (this.state.currentTape == {}) return;
             fetch(`api/v1/delete/${id}`)
-            .then(res => res.json())
-            .then((json) => { console.log(json.result.deletedCount)})
+                .then((res) => res.json())
+                .then(data => { 
+                    console.log(`deleted count: ${data.deleted.deletedCount}`);
+                    const activeList = this.state.tapes.filter((tape) => {
+                        return tape._id !== id;
+                    });
+                    console.log(activeList)
+                    this.setState({tapes: activeList, currentTape: {}});
+                }  
+                );
         }
 
         render() {
@@ -166,13 +180,13 @@
                 {header}
                 <ColoredLine color="#333745" />
                 {subHeader}
-                <Tapes data={this.state.tapes} clickHandler = {this.showDetail} />
+                <Tapes tapes={this.state.tapes} clickHandler = {this.showDetail.bind(this)} />
                 <TapeDetail
                 tape={this.state.currentTape}
-                onChange={this.fieldChanged}
-                resetHandler={this.clearForm}
-                saveTape={this.saveTape}
-                deleteTape={this.deleteTape}
+                change={this.fieldChange}
+                reset={this.clearForm}
+                save={this.saveTape}
+                delete={this.deleteTape.bind(this)}
                 />
             </main>
             )
