ready for submit

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -135,7 +135,7 @@
         }
 
         clearForm = (event) => {
-          this.setState({currentTape: [{}]});
+          this.setState({currentTape: {}});
         }
 
         saveTape = () => {
