--- a/views/home.ejs
+++ b/views/home.ejs
@@ -75,9 +75,9 @@
         }
 
         .buttons {
-            display: block;
-            margin: auto auto .5vh auto;
-            width: 61%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         button {
