--- a/views/home.ejs
+++ b/views/home.ejs
@@ -102,6 +102,11 @@
             background-color: #7F96FF;
         }
 
+        ul {
+            text-align: center;
+            padding: 0;
+        }
+
         @media (max-width: 800px) {
             main {
                 width: 80%;
